# SECURITY_ANALYSIS_AI_AGENT

./: .app_users.db  .env.example  .gitignore  README.md  USAGE.txt  WEBHOOK_SETUP.md  main.py  pyproject.toml  requirements.txt  setup_tools.sh  streamlit_app.py  test_ast.py  view-reports.sh
backend/: __init__.py  __main__.py  cli.py  github_service.py  report_formatter.py  webhook_server.py
core/: __init__.py  constants.py  findings.py  git_utils.py  llm_provider.py  orchestrator.py  parser.py  report_generator.py  scan_cache.py  tree_sitter_parser.py
core/agents/: __init__.py  base_agent.py  coordinator.py  recon_agent.py  remediation_agent.py  report_validator_agent.py  verifier_agent.py  vulnerability_agent.py
core/analysis/: __init__.py  ast_parser.py  call_graph.py  context_builder.py  symbol_table.py  taint_analyzer.py
core/tools/: __init__.py  bandit_scanner.py  base_tool.py  gitleaks_scanner.py  hardcoded_pattern_scanner.py  npm_audit.py  semgrep_scanner.py  tool_registry.py  trivy_scanner.py
skills/: architecture-trust-boundary-engine.md  async-flow-modeling.md  business-logic-anomaly-engine.md  control-flow-engine.md  core-ast-engine.md  cross-service-token-acceptance-engine.md  dataflow-taint-engine.md  false-positive-reduction-engine.md  module-callgraph-engine.md  report-validation-engine.md  sanitizer-recognition-engine.md  sast-auth-bypass-engine.md  sast-authorization-logic-engine.md  sast-command-injection-engine.md  sast-django-security-engine.md  sast-express-security-engine.md  sast-flask-security-engine.md  sast-jwt-oidc-engine.md  sast-nextjs-security-engine.md  sast-nosql-injection-engine.md  sast-path-traversal-engine.md  sast-prototype-pollution-engine.md  sast-secret-detection-engine.md  sast-security-hardening-engine.md  sast-sql-injection-engine.md  sast-universal-credential-engine.md  sast-web-misconfig-engine.md  sca-dependency-engine.md  unified-auth-access-engine.md  unified-credential-config-engine.md  unified-hardening-dependency-engine.md  unified-injection-analysis-engine.md
workspace/test_repo/: package.json  vuln.js
